2006-12-06  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-base/0.10.11.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gstreamer/0.10.11.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	GStreamer 0.10.11 and gst-plugins-base 0.10.11 releases

2006-12-04  Edward Hervey  <edward@fluendo.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-python/0.10.6.xml:
	* src/htdocs/releases/gst-python/Makefile.am:
	gst-python 0.10.6 "You're not very subtle, but you are effective"
	release.

2006-11-27  Edward Hervey  <edward@fluendo.com>

	* src/htdocs/news/news.xml:
	Mention the new GNonLin release in the news

2006-11-27  Edward Hervey  <edward@fluendo.com>

	* src/htdocs/entities.gst:
	* src/htdocs/releases/gnonlin/0.10.6.xml:
	* src/htdocs/releases/gnonlin/Makefile.am:
	GNonLin 0.10.6 "Where is my beard ?" release

2006-11-01  Tim-Philipp Müller  <tim at centricular dot net>

	* HACKING:
	  Fix numbering; mention that data-get downloads a LOT of data.

2006-10-27  Michael Smith  <msmith@fluendo.com>

	* src/htdocs/releases/gstreamer/template.xml:
	  11 consecutive releases with the same spelling mistake. Does nobody
	  ever actually read the release notes?

2006-10-10  Tim-Philipp Müller  <tim at centricular dot net>

	* src/htdocs/bugs/bugs.xml:
	  Add 0.10.11 milestones for core and -base.

2006-09-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gst-plugins-base/0.10.10.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gstreamer/0.10.10.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	* src/htdocs/releases/text.xsl:
	  release notes for 0.10.10

2006-09-08  Tim-Philipp Müller  <tim at centricular dot net>

	* src/htdocs/bugs/bugs.xml:
	  Add more milestones for -good and -ugly.

2006-09-01  Michael Smith  <msmith@fluendo.com>
