@@ -1,3 +1,9 @@
+2006-12-07  Jan Schmidt  <thaytan@mad.scientist.com>
+
+	* src/htdocs/releases/gst-plugins-base/0.10.11.xml:
+	Fix the api additions tags <additions><item></item>, not
+	<additions><addition></addition>
+
 2006-12-06  Jan Schmidt  <thaytan@mad.scientist.com>
 
 	* src/htdocs/entities.gst:
